<resources>
    <string name="app_name">ToDoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name_loading">EcoPlanner</string>


    <string name="menu_tasks">Tasks</string>
    <string name="menu_editadd">Add</string>
    <string name="menu_none">None</string>

    <string name="my_tasks">My tasks</string>
    <string name="null_do">Done - 0</string>
    <string name="to_new_add_ed_fragment">Switching to an add Fragment.</string>
    <string name="show_hidden">Hide</string>

    <string name="importance">Importance: </string>
    <string name="new_task">New task</string>
    <string name="set_deadline">Set the deadline for a task: </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save  </string>
    <string name="remove">Remove</string>
    <string name="enter_description">Enter description</string>

    <string name="info_task">Task</string>
    <string name="deadline">Deadline:</string>
    <string name="done">Done:</string>
    <string name="creation_date">Creation date:</string>
    <string name="modification_date">Modification date:</string>

    <string name="author">.arinstotle</string>
    <string name="author_email">huvian11@mail.ru</string>

    <string name="text_example">Sample.</string>

    <string name="copy">Copy task text</string>
    <string name="info">See more info...</string>
    <string name="plant_logo">Plant logo</string>
    <string name="edit_or_add_task">Edit or add task</string>
    <string name="notifications">Notification time</string>

    <string name="permission">Give permission for notifications to receive messages about the approaching deadline of tasks!</string>

    <string name="low_importance">Low importance</string>
    <string name="normal_importance">Normal importance</string>
    <string name="high_importance">High importance</string>
</resources>