<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:backgroundTint="?attr/background"
   >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/black_Olive"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/heavy_Metal"
            app:contentScrim="?attr/colorOnPrimary"
            app:expandedTitleMarginBottom="90dp"
            app:expandedTitleTextColor="@color/light_cave_Man"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="My tasks">

            <ImageView
                android:id="@+id/plant_header"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/plant1"
                android:contentDescription="@string/plant_logo">

            </ImageView>

            <TextView
                android:id="@+id/done_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/null_do"
                android:textColor="@color/sneaky_Sesame"
                android:textSize="16sp"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

            <ProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:visibility="invisible"></ProgressBar>


            <CheckBox
                android:id="@+id/show_hidden_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:button="@drawable/visible_selector"
                android:background="@drawable/rounded_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="?attr/background"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editAddFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit_or_add_task"
        android:src="@drawable/plus_add_create_new_cross_svgrepo_com"
        app:backgroundTint="?attr/floatingActionButtonLargePrimaryStyle"
        app:layout_anchor="@id/swipe"
        app:layout_anchorGravity="end|bottom" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

